Server/esp_server/build/log/idf_py_stderr_output_40522
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'init_sd_card':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:116:23: error: 'SD_CLK_PIN' undeclared (first use in this function); did you mean 'SD_CID_PSN'?
  116 |     slot_config.clk = SD_CLK_PIN;
      |                       ^~~~~~~~~~
      |                       SD_CID_PSN
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:116:23: note: each undeclared identifier is reported only once for each function it appears in
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:117:23: error: 'SD_CMD_PIN' undeclared (first use in this function); did you mean 'SD_CID_PSN'?
  117 |     slot_config.cmd = SD_CMD_PIN;
      |                       ^~~~~~~~~~
      |                       SD_CID_PSN
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:118:22: error: 'SD_D0_PIN' undeclared (first use in this function)
  118 |     slot_config.d0 = SD_D0_PIN;
      |                      ^~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:119:22: error: 'SD_D1_PIN' undeclared (first use in this function)
  119 |     slot_config.d1 = SD_D1_PIN;  // Only needed for 4-bit mode
      |                      ^~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:120:22: error: 'SD_D2_PIN' undeclared (first use in this function)
  120 |     slot_config.d2 = SD_D2_PIN;  // Only needed for 4-bit mode
      |                      ^~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:121:22: error: 'SD_D3_PIN' undeclared (first use in this function)
  121 |     slot_config.d3 = SD_D3_PIN;  // Only needed for 4-bit mode
      |                      ^~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:91:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   91 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
